--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,5 @@
-<h1>Hello {{name}}</h1>
+<h1>Hello how can I help you!!!</h1>
 <form action="func" method="POST">
-{% csrf_token %}
-Enter text Here:<input type="text" name="input">   <input type="button" name="mic">
+Enter text Here:<input type="text" name="input"> 
 <input type="submit">
-<input type="button" name="mic">
 </form>
