--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,27 @@
-<h1>Hello how can I help you!!!</h1>
-<form action="func" method="POST">
-Enter text Here:<input type="text" name="input"> 
-<input type="submit">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Techtrio-Virtual Assistant</title>
+    <link rel="stylesheet" href="{{ url_for('static' , filename ='styles.css')}}">
+</head>
+<body>
+   <div class="stars">
+  <button type="submit">
+            <div class="parrot">
+            <div class="big"></div>
+            <div class="middle"></div>
+            <div class="small"></div>	
+            <div class="text-box">
+              Click and Give Commands...
+              <span></span>
+            </div>				
+          </div>
+  </button>
+  <footer>
+    Developed with &#10084; by <a href="#">Techtrio</a>.
+  </footer>
+</div>
+</body>
+</html>
