--- a/static/styles.css
+++ b/static/styles.css
@@ -11,10 +11,7 @@ body{
   left: 0;
   width:100%;
   height:100vh;
-  background: url('stars.png');
-  /* background-size: cover; */
-  /* background-repeat: no-repeat; */
-  /* background-position: center; */
+  background: url("{{ url_for('static' , filename ='images/stars.png')}}");
   animation: star 120s linear infinite;
 }
 @keyframes star{
@@ -104,15 +101,9 @@ button{
       border-bottom-color: #FFFFFF;
       border-left-color: #FFFFFF;
     }
-    /* .parrot:hover .small:after,.parrot:focus .small:after{
-      position:absolute;
-      content:'Click Me';
-      transform:rotate(-135deg);
-      font-size:30px;
-    } */
     .parrot:hover .small,.parrot:focus .small{
       transform:rotate(135deg);
-      border-right-color: dareken(#F7A703);
+      border-right-color: #F7A703;
       border-top-color: transparent;
       border-bottom-color: transparent;
       border-left-color:transparent;
@@ -185,4 +176,25 @@ a{
 a:hover{
   font-size: 25px;
   color: #888;
+}
+.textarea{
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 250px;
+  height: 30px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  padding: 5px 10px;
+  font-size: 17px;
+  font-family: sans-serif;
+  font-weight: 600;
+  color:#333;
+  border: none;
+  background: #fff;
+    box-shadow: none;
+    outline: none;
 }
