--- a/templates/home.html
+++ b/templates/home.html
@@ -8,17 +8,21 @@
 </head>
 <body>
    <div class="stars">
-  <button type="submit">
-            <div class="parrot">
-            <div class="big"></div>
-            <div class="middle"></div>
-            <div class="small"></div>	
-            <div class="text-box">
-              Click and Give Commands...
-              <span></span>
-            </div>				
-          </div>
-  </button>
+    <form action="func" method="POST">
+      
+      <input type="text" name="input" class="textarea" placeholder="Enter Your Commands Here..."> 
+      <button type="submit">
+        <div class="parrot">
+        <div class="big"></div>
+        <div class="middle"></div>
+        <div class="small"></div>	
+        <div class="text-box">
+         Can give Commands by Voice OR by Typing
+          <span></span>
+        </div>				
+      </div>
+</button>
+    </form>
   <footer>
     Developed with &#10084; by <a href="#">Techtrio</a>.
   </footer>
