corrected teams page

--- a/templates/team.html
+++ b/templates/team.html
@@ -9,16 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
-            <img src="{{ url_for('static' , filename ='images/rkt.jpg')}}">
-            <div class="text">
-                <h4>Ratnesh Kumar <br>Tiwari</h4>
-                <ul>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+        <div class="try">
+            <div class="card">
+                <img src="{{ url_for('static' , filename ='images/ss.jpg')}}">
+                <div class="text">
+                    <h4>Sanskar Srivastava</h4>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                </div>
             </div>
         </div>
         <div class="try">
@@ -35,10 +37,11 @@
             </div>
         </div>
     </div>
+    <div class="try">
         <div class="card">
-            <img src="{{ url_for('static' , filename ='images/rs.jpg')}}">
+            <img src="{{ url_for('static' , filename ='images/ss.jpg')}}">
             <div class="text">
-                <h4>Rupal Singh</h4>
+                <h4>Sanskar Srivastava</h4>
                 <ul>
                     <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -47,6 +50,7 @@
                     </ul>
             </div>
         </div>
+    </div>
     </div>
 </body>
 </html>
