corrected syntax error

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <title>Techtrio-Virtual Assistant</title>
     <link rel="stylesheet" href="{{ url_for('static' , filename ='styles.css')}}">
 </head>
-<body>
+<body><form action="func" method="POST">
    <div class="stars">
   <button type="submit">
             <div class="parrot">
@@ -14,7 +14,7 @@
             <div class="middle"></div>
             <div class="small"></div>	
             <div class="text-box">
-              Click and Give Commands...
+              Click and Give Command...
               <span></span>
             </div>				
           </div>
@@ -23,5 +23,6 @@
     Developed with &#10084; by <a href="#">Techtrio</a>.
   </footer>
 </div>
+</form>
 </body>
 </html>
