--- a/templates/home.html
+++ b/templates/home.html
@@ -6,21 +6,8 @@
     <title>Techtrio-Virtual Assistant</title>
     <link rel="stylesheet" href="{{ url_for('static' , filename ='styles.css')}}">
 </head>
-<body><form action="func" method="POST">
-   <div class="stars">
-<<<<<<< HEAD
-  <button type="submit">
-            <div class="parrot">
-            <div class="big"></div>
-            <div class="middle"></div>
-            <div class="small"></div>	
-            <div class="text-box">
-              Click and Give Command...
-              <span></span>
-            </div>				
-          </div>
-  </button>
-=======
+<body>
+   <div class="stars"></div>
     <form action="func" method="POST">
       
       <input type="text" name="input" class="textarea" placeholder="Enter Your Commands Here..."> 
@@ -36,11 +23,8 @@
       </div>
 </button>
     </form>
->>>>>>> 786850d0a36ddfe24cd8f822ba344d160f0ca8a4
   <footer>
-    Developed with &#10084; by <a href="#">Techtrio</a>.
+    Developed with &#10084; by <a href="team.html">Techtrio</a>.
   </footer>
-</div>
-</form>
 </body>
 </html>
